# ddu-lab

./: .env_example  .gitignore  00-download_models_hf.py  CONTRIBUTING.md  GraphRecursionError_Fix_Guide.md  README.md  RapidOCR_Migration_Guide.md  config_reader.py  pyproject.toml  test_complete_workflow.py  test_workflow_from_assembled.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-labeler.yml
hddu/: complete_workflow.py  config.py  convert_docling.py  convert_docyolo_v3.py  element.py  export.py  extractor.py  file.py  hddu_parser.py  interpreter.py  logging_config.py  parser.py  pdf.py  preprocessing.py  rate_limit_handler.py  run_assembly.py  state.py  translate.py  utils.py
hddu/assembly/: config.py  main_assembler.py  matcher.py  merger.py  postprocessor.py  preparer.py
hddu/prompts/: IMAGE-SYSTEM-PROMPT.yaml  IMAGE-USER-PROMPT.yaml  TABLE-SYSTEM-PROMPT.yaml  TABLE-USER-PROMPT.yaml
