[project]
name = "h-ddu-wsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Brotli>=1.1.0",
    "click>=8.1.7",
    "fast-langdetect>=0.2.3,<0.3.0",
    "loguru>=0.6.0",
    "numpy>=1.21.6",
    "pydantic>=2.7.2,<2.11",
    "PyMuPDF>=1.24.9,<1.27.0",
    "scikit-learn>=1.0.2",
    "torch>=2.2.2,!=2.5.0,!=2.5.1,<3",
    "torchvision", # 특정 버전 없이 최신 버전을 사용하는 경우
    "transformers>=4.49.0,!=4.51.0,<5.0.0",
    "pdfminer.six==20250506",
    "tqdm>=4.67.1",
    "konlpy>=0.6.0",
    "langchain>=0.3.25",
    "langgraph>=0.4.5",
    "kiwipiepy>=0.21.0",
    "rank-bm25>=0.2.2",
    "olefile>=0.47",
    "pdf2image>=1.17.0",
    "openai>=1.79.0",
    "deepl>=1.22.0",
    "feedparser>=6.0.11",
    "twine>=6.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.2",
    "wheel>=0.45.1",
    "langchain-openai>=0.3.17",
    "langchain-ollama>=0.1.0",
    "tavily-python>=0.7.2",
    "anthropic>=0.51.0",
    "pandas>=2.2.3",
    "boto3>=1.38.18",
    "ultralytics>=8.3.137",
    "doclayout-yolo>=0.0.3",
    "rapid-table>=1.0.5",
    "ftfy>=6.3.1",
    "omegaconf>=2.3.0",
    "pyarrow>=20.0.0",
    "fastparquet>=2024.11.0",
    "docling==2.15.1",
    "langchain-teddynote>=0.3.45",
    "markdownify>=1.1.0",
    "evaluate>=0.4.3",
    "nltk>=3.9.1",
    "jpype1>=1.5.2",
    "langchain-community>=0.3.25",
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.11.7",
    "langchain-anthropic>=0.3.13",
    "langchain-google-genai>=2.1.7",
    "easyocr>=1.7.2",
    "pytesseract>=0.3.13",
    "tiktoken>=0.5.0",
]
